syntax = "proto3";
package dalc;
option go_package = "github.com/rollkit/rollkit/types/pb/dalc";

import "rollkit/rollkit.proto";
import "gogoproto/gogo.proto";

enum StatusCode {
	STATUS_CODE_UNSPECIFIED = 0;
	STATUS_CODE_SUCCESS = 1;
	STATUS_CODE_TIMEOUT = 2;
	STATUS_CODE_ERROR   = 3;
}

message DAResponse {
	StatusCode code = 1;
	string message = 2;
	uint64 da_height = 3 [(gogoproto.customname) = "DAHeight"];
}

message SubmitBlocksRequest {
	repeated rollkit.Block blocks = 1;
}

message SubmitBlocksResponse {
	DAResponse result = 1;
}

message RetrieveBlocksRequest {
	uint64 da_height = 1 [(gogoproto.customname) = "DAHeight"];
}

message RetrieveBlocksResponse {
	DAResponse result = 1;
	repeated rollkit.Block blocks = 2;
}

service DALCService {
	rpc SubmitBlocks(SubmitBlocksRequest) returns (SubmitBlocksResponse) {}
	rpc RetrieveBlocks(RetrieveBlocksRequest) returns (RetrieveBlocksResponse) {}
}
